Change GitHub url

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </a>
       </div>
       <div class="social">
-        <a href="https://www.facebook.com/insignia4u/" target="_blank" class="item">
+        <a href="https://github.com/insignia4u" target="_blank" class="item">
           <i class="icon">
             <img src="images/github.svg" alt="GitHub">
           </i>
