--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Font -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.css?v2" rel="stylesheet">
 </head>
 
 <body>
